Added HTML subsections above pics

--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
     <main>
         <section>
             <h2>Past</h2>
+                <h5>Where have we been?</h5>
             <img src="assets/resizedassets/CloudySkyResized.jpg" alt="Stormy sky above lakefront"/>
         </section>
         <section>
             <h2>Present</h2>
+                <h5>Where are we now?</h5>
             <img src="assets/resizedassets/GreenHeronResized.jpg" alt="Blue and Green small Heron bird"/>
         </section>
         <section>
             <h2>Future</h2>
+                <h5>Where do we want to see ourselves?</h5>
             <img src="assets/resizedassets/Mt.BlueResized.jpg" alt="Mountaintop view looking down"/>
         </section>
     </main>
