swapped heron for nursesharks video

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section>
             <h2>Future</h2>
                 <h5>Where do we want to see ourselves?</h5>
-            <img src="assets/resizedassets/Mt.BlueResized.jpg" alt="Mountaintop view looking down"/>
+            <video src="assets/NurseSharksVideo2.mp4" alt="Swimming with the sharks!"/>
         </section>
     </main>
     <footer>
