Created real videogit add .

--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
     <main>
         <section>
             <h2>Past</h2>
-                <h5>Where have we been?</h5>
-            <img src="assets/resizedassets/CloudySkyResized.jpg" alt="Stormy sky above lakefront"/>
+            <h5>Where have we been?</h5>
+            <img src="assets/resizedassets/CloudySkyResized.jpg" alt="Stormy sky above lakefront" />
         </section>
         <section>
             <h2>Present</h2>
-                <h5>Where are we now?</h5>
-            <img src="assets/resizedassets/GreenHeronResized.jpg" alt="Blue and Green small Heron bird"/>
+            <h5>Where are we now?</h5>
+            <img src="assets/resizedassets/GreenHeronResized.jpg" alt="Blue and Green small Heron bird" />
         </section>
         <section>
             <h2>Future</h2>
-                <h5>Where do we want to see ourselves?</h5>
-            <video src="assets/NurseSharksVideo2.mp4" alt="Swimming with the sharks!"/>
+            <h5>Where do we want to see ourselves?</h5>
+            <video width="750" height="560" controls>
+
+                <source src="assets/NurseSharksVideo2.mp4" type=video/mp4 alt="Swimming with the sharks!" </video>
         </section>
     </main>
     <footer>
-     <p>&copy;Benjamin Halliwell</p>
+        <p>&copy;Benjamin Halliwell</p>
     </footer>
 </body>
 
