--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
             <ul>
                 <li><a href="https://username.github.io/name-of-repo"></a></li>
-                <li><a href=""></a>Link 1</li>
-                <li><a href=""></a>Link 2</li>
+                <li><a href="https://rewildingeurope.com/">Rewilding Europe</a></li>
+                <li><a href="https://knepp.co.uk/knepp-estate/">Knepp Estate</a></li>
             </ul>
         </nav>
     </header>
@@ -21,11 +21,41 @@
             <h2>Past</h2>
             <h5>Where have we been?</h5>
             <img src="assets/resizedassets/CloudySkyResized.jpg" alt="Stormy sky above lakefront" />
+            <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.
+                Diam quis enim lobortis scelerisque fermentum dui. Aliquet risus feugiat in ante metus dictum at.</h6>
+
+            <h6>Consequat id porta nibh venenatis cras sed felis. Risus commodo viverra maecenas accumsan lacus vel
+                facilisis volutpat est.Quis blandit turpis cursus in. Nulla porttitor massa id neque aliquam vestibulum
+                morbi blandit.</h6>
+
+            <h6>Aenean sed adipiscing diam donec adipiscing tristique risus nec feugiat. Amet commodo nulla facilisi
+                nullam vehicula. Bibendum est ultricies integer quis. Aliquam id diam maecenas ultricies mi eget mauris.
+            </h6>
+
+            <h6>dui sapien eget mi proin sed libero enim. Egestas fringilla phasellus faucibus scelerisque eleifend
+                donec pretium.</h6>
+
         </section>
         <section>
             <h2>Present</h2>
             <h5>Where are we now?</h5>
             <img src="assets/resizedassets/GreenHeronResized.jpg" alt="Blue and Green small Heron bird" />
+            <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.
+                Diam quis enim lobortis scelerisque fermentum dui. Aliquet risus feugiat in ante metus dictum at.</h6>
+
+            <h6>Consequat id porta nibh venenatis cras sed felis. Risus commodo viverra maecenas accumsan lacus vel
+                facilisis volutpat est.Quis blandit turpis cursus in. Nulla porttitor massa id neque aliquam vestibulum
+                morbi blandit.</h6>
+
+            <h6>Aenean sed adipiscing diam donec adipiscing tristique risus nec feugiat. Amet commodo nulla facilisi
+                nullam vehicula. Bibendum est ultricies integer quis. Aliquam id diam maecenas ultricies mi eget mauris.
+            </h6>
+
+            <h6>dui sapien eget mi proin sed libero enim. Egestas fringilla phasellus faucibus scelerisque eleifend
+                donec pretium.</h6>
+
         </section>
         <section>
             <h2>Future</h2>
@@ -33,6 +63,20 @@
             <video width="750" height="560" controls>
 
                 <source src="assets/NurseSharksVideo2.mp4" type=video/mp4 alt="Swimming with the sharks!" </video>
+                <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Diam quis enim lobortis scelerisque fermentum dui. Aliquet risus feugiat in
+                    ante metus dictum at.</h6>
+
+                <h6>Consequat id porta nibh venenatis cras sed felis. Risus commodo viverra maecenas accumsan lacus vel
+                    facilisis volutpat est.Quis blandit turpis cursus in. Nulla porttitor massa id neque aliquam
+                    vestibulum morbi blandit.</h6>
+
+                <h6>Aenean sed adipiscing diam donec adipiscing tristique risus nec feugiat. Amet commodo nulla facilisi
+                    nullam vehicula. Bibendum est ultricies integer quis. Aliquam id diam maecenas ultricies mi eget
+                    mauris.</h6>
+
+                <h6>dui sapien eget mi proin sed libero enim. Egestas fringilla phasellus faucibus scelerisque eleifend
+                    donec pretium.</h6>
         </section>
     </main>
     <footer>
